objects/ASI_TnE_ClaimHeader__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Meeting_Total__c</fullName>
        <label>Meeting Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Meeting__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Meeting_and_Entertainment_Total__c</fullName>
        <formula>ASI_TnE_Meeting_Total__c +  ASI_TnE_Local_Entertainment_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting and Entertainment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Monthly_Allowance_Used_Percent__c</fullName>
        <formula>IF(ASI_TnE_Monthly_Allowance__c=0, null, ASI_TnE_Local_Ent_Meeting_Total__c /  ASI_TnE_Monthly_Allowance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of Monthly Allowance Used</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Monthly_Allowance__c</fullName>
        <formula>Owner:User.ASI_TnE_Monthly_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Allowance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Number_of_Line__c</fullName>
        <label>Number of TnE Line</label>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Over_3_Months_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 3 Months Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payee_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>No need to input if you claim for yourself</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payee_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee (Supplier)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims (Payee (Supplier))</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee (JP Supplier)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims (Payee)</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payment_Date_Finance__c</fullName>
        <label>Payment Date (Finance)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payment_Date__c</fullName>
        <formula>ASI_TnE_Due_Date_Mapping__r.ASI_JP_TnE_Payment_Date__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payment_Option__c</fullName>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_TnE_3rd_Party__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>DC Card</fullName>
                </value>
                <value>
                    <fullName>DC Card(Mgr.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Period_Covered_From__c</fullName>
        <label>Period Covered From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Period_Covered_To__c</fullName>
        <label>Period Covered To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Purpose_of_Travel__c</fullName>
        <label>Purpose of Travel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Pymt_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Region__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Reimbursement_Due_Employee__c</fullName>
        <formula>ASI_TnE_Expense_Report_Total__c - ASI_TnE_Cash_Advance_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reimbursement Due Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Second_Approval_By__c</fullName>
        <label>Second Approval By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Second_Approval_Date__c</fullName>
        <label>Second Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Waiting for Department Head Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Verification</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Director Review</fullName>
                </value>
                <value>
                    <fullName>Finance Director Approved</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Finance Verified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>PRA Final Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_Ledger_Text__c</fullName>
        <label>Sub-Ledger Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_Ledger__c</fullName>
        <formula>IF(ISBLANK(ASI_TnE_Payee_Employee__c), 
 Owner:User.ASI_TnE_Sub_Ledger__c , 
ASI_TnE_Payee_Employee__r.ASI_TnE_Sub_Ledger__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Ledger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Submission_Date__c</fullName>
        <formula>ASI_TnE_Due_Date_Mapping__r.ASI_JP_TnE_Closing_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sync_to_JDE_Date__c</fullName>
        <label>Sync to JDE Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Allow_Set_Draft__c</fullName>
        <formula>IF(
   AND(
       CONTAINS($Setup.ASI_TnE_Validation_Bypass__c.ASI_TnE_Object_API__c, &quot;ASI_TnE_ClaimHeader__c&quot;),
       OR(
          ISBLANK($Setup.ASI_TnE_Validation_Bypass__c.ASI_TnE_Record_Type__c),
          CONTAINS($Setup.ASI_TnE_Validation_Bypass__c.ASI_TnE_Record_Type__c, RecordType.DeveloperName)
       )
   ),
   $Setup.ASI_TnE_Validation_Bypass__c.ASI_TnE_Bypass_Validation__c,
   FALSE
)</formula>
        <label>Sys_Allow Set Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims3Zjk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims3ZtQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims3Zwy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Current_Approver__c</fullName>
        <label>Sys_Current Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Exceed_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Exceed Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Fiscal_Year__c</fullName>
        <description>IF( MONTH( ASI_TnE_End_Date__c ) &gt;= 7 , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c )), 2) &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c ) + 1), 2) , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c ) - 1), 2) &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c )), 2))</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_KR&quot;),IF( MONTH( ASI_TnE_KR_GL_Date__c ) &gt;= 7 , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_TnE_KR_GL_Date__c )), 2) &amp; RIGHT(TEXT(YEAR(ASI_TnE_KR_GL_Date__c ) + 1), 2) , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_TnE_KR_GL_Date__c ) - 1), 2) &amp; RIGHT(TEXT(YEAR(ASI_TnE_KR_GL_Date__c )), 2)),IF( MONTH( ASI_TnE_End_Date__c ) &gt;= 7 , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c )), 2) &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c ) + 1), 2) , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c ) - 1), 2) &amp; RIGHT(TEXT(YEAR(ASI_TnE_End_Date__c )), 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Last_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Last Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sys_Last_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Payee__c</fullName>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
   IF(NOT(ISBLANK(ASI_TnE_Payee_Employee__c)), ASI_TnE_Payee_Employee__r.FirstName &amp; &quot; &quot; &amp; ASI_TnE_Payee_Employee__r.LastName, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName),
   &quot;&quot;
)</formula>
        <label>Sys_Payee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Resubmit__c</fullName>
        <label>Sys_Resubmit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Trigger_Time__c</fullName>
        <formula>NOW() - 0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_TW_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_TW_Payment_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Third_Approval_By__c</fullName>
        <label>Third Approval By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Third_Approval_Date__c</fullName>
        <label>Third Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Amount_Approved__c</fullName>
        <label>Total Amount (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Amount_LCY__c</fullName>
        <label>Total Payment Amount (LCY)</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_HK_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TnE_ClaimDetail__c.ASI_TnE_Dispute__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Payment_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_GST_Value__c</fullName>
        <label>Total GST Value</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_MY_GST_Value__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Non_Taxable_Amount_LCY__c</fullName>
        <label>Total Non-Taxable Amount (LCY)</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Non_Taxable_Amount_Display__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Non_Taxable_Amount__c</fullName>
        <label>Total Non-Taxable Amount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Non_Taxable_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Tax_Amount_LCY__c</fullName>
        <label>Total Tax Amount (LCY)</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Tax_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Tax_Amount__c</fullName>
        <label>Total Tax Amount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_JP_TnE_Tax_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Taxable_Amount_LCY__c</fullName>
        <label>Total Taxable Amount (LCY)</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Taxable_Amount_Display__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Taxable_Amount__c</fullName>
        <label>Total Taxable Amount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Taxable_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Type__c</fullName>
        <label>T&amp;E Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eApproval Claim</fullName>
                </value>
                <value>
                    <fullName>Paper Approval Claim</fullName>
                </value>
                <value>
                    <fullName>Out of Pocket</fullName>
                </value>
                <value>
                    <fullName>Corp Card</fullName>
                </value>
                <value>
                    <fullName>Fleet Card</fullName>
                </value>
                <value>
                    <fullName>Cash Advance</fullName>
                </value>
                <value>
                    <fullName>3rd Party Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Usage__c</fullName>
        <description>S=Same; O=Overpaid; U=Underpaid</description>
        <label>Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_User_Branch_Code__c</fullName>
        <formula>ASI_TnE_KR_Payee__r.ASI_KOR_User_Branch_Code__c</formula>
        <label>Payee Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_User_Branch_Name__c</fullName>
        <formula>ASI_TnE_KR_Payee__r.ASI_KOR_User_Branch_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Branch Name</label>
        <type>Text</type>
    </fields>
    <label>Travel &amp; Entertainment Claim</label>
    <listViews>
        <fullName>ASI_Alisan_TNE</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_TnE_Claim_ID__c</columns>
        <columns>ASI_TnE_Type__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_Payee_Employee__c</columns>
        <columns>ASI_TnE_Start_Date__c</columns>
        <columns>ASI_TnE_End_Date__c</columns>
        <columns>ASI_TnE_Total_Amount_LCY__c</columns>
        <columns>ASI_TnE_Over_3_Months_Submission__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_HK_Claim_Header</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_HK_Claim_Header_Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Alison</value>
        </filters>
        <label>All Alisan&apos;s T&amp;E</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_JP_TnE_All_JP_T_E_Claims</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_TnE_Document_No__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_Payment_Option__c</columns>
        <columns>ASI_TnE_Payment_Date__c</columns>
        <columns>ASI_TnE_3rd_Party__c</columns>
        <columns>ASI_TnE_Cover_Period_From__c</columns>
        <columns>ASI_TnE_Cover_Period_To__c</columns>
        <columns>ASI_TnE_Submission_Date__c</columns>
        <columns>ASI_TnE_Type__c</columns>
        <columns>ASI_TnE_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_JP_TnE_eApproval_Claim_Header</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_JP_TnE_Claim_Header_Finance_View</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_JP_TnE_Paper_Approval_Claim_Header</value>
        </filters>
        <label>All JP Travel &amp; Entertainment Claims</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_JP_TnE_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_JP_TnE_My_JP_T_E_Claims</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_TnE_Document_No__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_Type__c</columns>
        <columns>ASI_TnE_3rd_Party__c</columns>
        <columns>ASI_TnE_Payment_Option__c</columns>
        <columns>ASI_TnE_Submission_Date__c</columns>
        <columns>ASI_TnE_Cover_Period_From__c</columns>
        <columns>ASI_TnE_Cover_Period_To__c</columns>
        <columns>ASI_TnE_Payment_Date__c</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_Currency__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_JP_TnE_eApproval_Claim_Header</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_JP_TnE_Claim_Header_Finance_View</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_JP_TnE_Paper_Approval_Claim_Header</value>
        </filters>
        <label>My JP Travel &amp; Entertainment Claims</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_JP_TnE_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_KR_A_P_Card</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_AnP_Finance_View,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_AnP</value>
        </filters>
        <label>All KR A&amp;P Card</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_KR_T_E_Cash</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_Cash_Finance_View,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_Cash</value>
        </filters>
        <filters>
            <field>ASI_TnE_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All KR T&amp;E Cash (Draft)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_PRKI_A_P_Card</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_AnP_Finance_View,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_AnP</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Company__c</field>
            <operation>equals</operation>
            <value>286-PRKI</value>
        </filters>
        <label>All PRKI A&amp;P Card</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_KR_AnP_Card_PRKI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_PRKI_T_E_Card</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_TnE,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_TnE_Finance_View</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Company__c</field>
            <operation>equals</operation>
            <value>286-PRKI</value>
        </filters>
        <label>All PRKI T&amp;E Card</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_KR_TnE_Card_PRKI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_PRKI_T_E_Cash</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_Cash_Finance_View,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_Cash</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Company__c</field>
            <operation>equals</operation>
            <value>286-PRKI</value>
        </filters>
        <label>All PRKI T&amp;E Cash</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_KR_TnE_Cash_PRKI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_PRK_A_P_Card</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_AnP_Finance_View,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_AnP</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Company__c</field>
            <operation>equals</operation>
            <value>222-PRK</value>
        </filters>
        <label>All PRK A&amp;P Card</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_KR_AnP_Card_PRK</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_PRK_T_E_Card</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_TnE,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_TnE_Finance_View</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Company__c</field>
            <operation>equals</operation>
            <value>222-PRK</value>
        </filters>
        <label>All PRK T&amp;E Card</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_KR_TnE_Card_PRK</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_All_PRK_T_E_Cash</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Company__c</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_KR_Credit_Card_No__c</columns>
        <columns>ASI_TnE_KR_GL_Date__c</columns>
        <columns>ASI_TnE_Status__c</columns>
        <columns>ASI_TnE_KR_Payee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TnE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_ClaimHeader__c.ASI_TnE_KR_Cash,ASI_TnE_ClaimHeader__c.ASI_TnE_KR_Cash_Finance_View</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Company__c</field>
            <operation>equals</operation>
            <value>222-PRK</value>
        </filters>
        <label>All PRK T&amp;E Cash</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_KR_TnE_Cash_PRK</group>
        </sharedTo>
    </listViews>
</CustomObject>